objects/ortoo_qra__User_Attributes__c.object
<CustomObject>
    <description>This object serves as a 1-1 mapping with User object. Attributes (fields) can be added to this object and later used by Q-assign configuration to run various types of matching rules while distributing records (such as Leads, Cases).</description>
    <fields>
        <fullName>RSC_Experience__c</fullName>
        <description>Identify an agent/adviser&apos;s experience level.</description>
        <label>Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Senior</fullName>
                    <default>true</default>
                    <label>Senior</label>
                </value>
                <value>
                    <fullName>Junior</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Busy - Meeting</fullName>
                </value>
                <value>
                    <fullName>Busy - Break</fullName>
                </value>
                <value>
                    <fullName>Busy - Lunch</fullName>
                </value>
                <value>
                    <fullName>Busy - Training</fullName>
                </value>
                <value>
                    <fullName>Busy - Admin</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RSC_TeamName__c</fullName>
        <description>Name of team that user belongs to. Retrieved from User Role.</description>
        <label>Team Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_PrimaryRegion__c</fullName>
        <description>Nurses on the road primary sub region - primary region which the booking agents operates in</description>
        <label>Primary Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>SC_RegionGrouping__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SC_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_RegionGrouping__c</fullName>
        <label>Region Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Coastal</fullName>
                </value>
                <value>
                    <fullName>Gauteng</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_SecondaryRegion__c</fullName>
        <description>Nurses on the road secondary sub region - secondary region which the booking agents operates in</description>
        <label>Secondary Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>SC_RegionGrouping__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SC_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SC_TertiaryRegion__c</fullName>
        <description>Nurses on the road tertiary sub region - tertiary region which the booking agents operates in</description>
        <label>Tertiary Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>SC_RegionGrouping__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SC_Region</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ortoo_qra__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Unique link to user.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Q-assign User Attributes</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ortoo_qra__User__c</columns>
        <columns>RSC_Status__c</columns>
        <columns>RSC_TeamName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>AW_LibertyAdministrators</group>
            <group>RSC_ClientandAdviserServiceCentreLeaders</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>User Attributes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Q-assign User Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>